WHAT WE CAN DO? added

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	    <div class="container">
 	    	<div class="row">
 	    		<div class="col-lg-8 col-lg-offset-2 centered">
-	    			<h1>NašeÚkoly.CZ</h1>
+	    			<h1>NaseUkoly.CZ</h1>
 	    			<h2>Business Consultants and Functional .NET Developers in F#</h2>
 	    		</div><!-- /col-lg-8 -->
 	    	</div><!-- /row -->
@@ -69,7 +69,14 @@
 				
 				<div class="col-lg-7 centered">
 					<h3>WHAT WE CAN DO?</h3>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+					<p>
+                        <ul>
+                            <li>Process Analysis</li>
+                            <li>Office 365 and Microsoft Dynamics CRM Online deployment</li>
+                            <li>Data synchronization</li>
+                            <li>Custom Software Development</li>
+                        </ul>
+                    </p>
 				</div>
 			</div>
 		</div>
