--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="assets/img/logo_Nase_Ukoly_262x77px" /></a>
+          <a class="navbar-brand" href="#"><img src="assets/img/logo_Nase_Ukoly_262x77px.gif" /></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
