--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			</div>
 			
 			<div class="col-lg-3 mt">
-				<p><button type="button" class="btn btn-theme btn-lg">Email Me!</button></p>
+				<p><a type="button" class="btn btn-theme btn-lg" href="mailto:info@naseukoly.cz">Email Me!</a></p>
 			</div>
 		</div>
 	</div>
