--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-5 centered">
-					<img src="assets/img/iphone.png" alt="">
+					<img src="assets/img/logo.png" alt="">
 				</div>
 				
 				<div class="col-lg-7 centered">
