--- a/index.html
+++ b/index.html
@@ -208,16 +208,16 @@
 			<div class="row centered">
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="col-md-3">
-						<a href="#"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.facebook.com/NaseUkolyCZ"><i class="fa fa-facebook"></i></a>
 					</div>
 					<div class="col-md-3">
-						<a href="#"><i class="fa fa-dribbble"></i></a>
+						<a href="http://www.naseukoly.cz"><i class="fa fa-dribbble"></i></a>
 					</div>
 					<div class="col-md-3">
-						<a href="#"><i class="fa fa-twitter"></i></a>
+						<a href="https://twitter.com/NaseUkolyCZ"><i class="fa fa-twitter"></i></a>
 					</div>
 					<div class="col-md-3">
-						<a href="#"><i class="fa fa-envelope"></i></a>
+						<a href="mailto:info@naseukoly.cz"><i class="fa fa-envelope"></i></a>
 					</div>
 				</div>
 			</div>
