partner competencies logo leads to PinPoint

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="assets/img/logo_Nase_Ukoly_262x77px.gif" /></a>
+          <a class="navbar-brand" href="http://www.naseukoly.cz"><img src="assets/img/logo_Nase_Ukoly_262x77px.gif" /></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -64,7 +64,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-5 centered">
-					<img src="assets/img/logo.png" alt="">
+                    <a href="https://pinpoint.microsoft.com/cs-cz/companies/4298489438">
+                        <img src="assets/img/logo.png" alt="Silver Competencies">
+                    </a>
 				</div>
 				
 				<div class="col-lg-7 centered">
