--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	    	<div class="row">
 	    		<div class="col-lg-8 col-lg-offset-2 centered">
 	    			<h1>NaseUkoly.CZ</h1>
-	    			<h2>Business Consultants and Functional .NET Developers in F#</h2>
+	    			<h2>Business Consultants and Functional .NET Developers</h2>
 	    		</div><!-- /col-lg-8 -->
 	    	</div><!-- /row -->
 	    </div> <!-- /container -->
@@ -76,7 +76,7 @@
                             <li>Process Analysis</li>
                             <li>Office 365 and Microsoft Dynamics CRM Online deployment</li>
                             <li>Data synchronization</li>
-                            <li>Custom Software Development</li>
+                            <li>Custom C#/F# Software Development</li>
                         </ul>
                     </p>
 				</div>
@@ -89,10 +89,10 @@
 			<h3>OUR LATEST WORK</h3>
 			<div class="mt"></div>
 			<div class="col-lg-4">
-				<a href="#"><img src="assets/img/01.jpg" alt=""></a>
+				<a href="https://github.com/SyncToday/exchange2crm"><img src="assets/img/01.jpg" alt="exchange2crm"></a>
 			</div>
 			<div class="col-lg-4">
-				<a href="#"><img src="assets/img/02.jpg" alt=""></a>
+				<a href="http://sync.today"><img src="assets/img/02.jpg" alt="sync.today"></a>
 			</div>
 			<div class="col-lg-4">
 				<a href="#"><img src="assets/img/03.jpg" alt=""></a>
