texts added to images

--- a/index.html
+++ b/index.html
@@ -89,29 +89,19 @@
 			<h3>OUR LATEST WORK</h3>
 			<div class="mt"></div>
 			<div class="col-lg-4">
-				<a href="https://github.com/SyncToday/exchange2crm"><img src="assets/img/01.jpg" alt="exchange2crm"></a>
+				<a href="https://github.com/SyncToday/exchange2crm"><img src="assets/img/01.jpg" alt="Import Office 365 Exchange Contact to Microsoft Dynamics CRM"></a>
+                Import Office 365 Exchange Contact to Microsoft Dynamics CRM
 			</div>
 			<div class="col-lg-4">
-				<a href="http://sync.today"><img src="assets/img/02.jpg" alt="sync.today"></a>
+				<a href="http://sync.today"><img src="assets/img/02.jpg" alt=".NET Business Processes Automation Platform"></a>
+                .NET Business Processes Automation Platform
 			</div>
 			<div class="col-lg-4">
-				<a href="#"><img src="assets/img/03.jpg" alt=""></a>
+				<a href="#"><img src="assets/img/03.jpg" alt="Microsoft Dynamics CRM implementation"></a>
+                Microsoft Dynamics CRM implementation in Langard
 			</div>
 		</div>
-		
-		<div class="row centered mt grid">
-			<div class="mt"></div>		
-			<div class="col-lg-4">
-				<a href="#"><img src="assets/img/04.jpg" alt=""></a>
-			</div>
-			<div class="col-lg-4">
-				<a href="#"><img src="assets/img/05.jpg" alt=""></a>
-			</div>
-			<div class="col-lg-4">
-				<a href="#"><img src="assets/img/06.jpg" alt=""></a>
-			</div>
-		</div>
-		
+				
 		<div class="row mt centered">
 			<div class="col-lg-7 col-lg-offset-1 mt">
 					<p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
