--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
 			<div class="mt"></div>
 			<div class="col-lg-4">
 				<a href="https://github.com/SyncToday/exchange2crm"><img src="assets/img/01.jpg" alt="Import Office 365 Exchange Contact to Microsoft Dynamics CRM"></a>
-                Import Office 365 Exchange Contact to Microsoft Dynamics CRM
+                <span>Import Office 365 Exchange Contact to Microsoft Dynamics CRM</span>
 			</div>
 			<div class="col-lg-4">
 				<a href="http://sync.today"><img src="assets/img/02.jpg" alt=".NET Business Processes Automation Platform"></a>
-                .NET Business Processes Automation Platform
+                <span>.NET Business Processes Automation Platform</span>
 			</div>
 			<div class="col-lg-4">
 				<a href="#"><img src="assets/img/03.jpg" alt="Microsoft Dynamics CRM implementation"></a>
-                Microsoft Dynamics CRM implementation in Langard
+                <span>Microsoft Dynamics CRM implementation in Langard</span>
 			</div>
 		</div>
 				
