seecond row with texts

--- a/index.html
+++ b/index.html
@@ -90,14 +90,22 @@
 			<div class="mt"></div>
 			<div class="col-lg-4">
 				<a href="https://github.com/SyncToday/exchange2crm"><img src="assets/img/01.jpg" alt="Import Office 365 Exchange Contact to Microsoft Dynamics CRM"></a>
-                <span>Import Office 365 Exchange Contact to Microsoft Dynamics CRM</span>
 			</div>
 			<div class="col-lg-4">
 				<a href="http://sync.today"><img src="assets/img/02.jpg" alt=".NET Business Processes Automation Platform"></a>
-                <span>.NET Business Processes Automation Platform</span>
 			</div>
 			<div class="col-lg-4">
 				<a href="#"><img src="assets/img/03.jpg" alt="Microsoft Dynamics CRM implementation"></a>
+			</div>
+		</div>
+		<div class="row centered mt grid">
+			<div class="col-lg-4">
+                <span>Import Office 365 Exchange Contact to Microsoft Dynamics CRM</span>
+			</div>
+			<div class="col-lg-4">
+                <span>.NET Business Processes Automation Platform</span>
+			</div>
+			<div class="col-lg-4">
                 <span>Microsoft Dynamics CRM implementation in Langard</span>
 			</div>
 		</div>
