--- a/index.html
+++ b/index.html
@@ -112,95 +112,15 @@
 				
 		<div class="row mt centered">
 			<div class="col-lg-7 col-lg-offset-1 mt">
-					<p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+					<p class="lead">We develop business applications using the latest Microsoft technologies. We believe in functional languages, BDD, open-source, synchronization.</p>
 			</div>
 			
 			<div class="col-lg-3 mt">
-				<p><a type="button" class="btn btn-theme btn-lg" href="mailto:info@naseukoly.cz">Email Me!</a></p>
+				<p><a type="button" class="btn btn-theme btn-lg" href="mailto:info@naseukoly.cz">Contact Us!</a></p>
 			</div>
 		</div>
 	</div>
 
-
-	<div id="skills">
-		<div class="container">
-			<div class="row centered">
-				<h3>OUR SKILLS</h3>
-				<div class="col-lg-3 mt">
-					<canvas id="javascript" height="130" width="130"></canvas>
-					<p>Javascript</p>
-					<br>
-					<script>
-						var doughnutData = [
-								{
-									value: 70,
-									color:"#74cfae"
-								},
-								{
-									value : 30,
-									color : "#3c3c3c"
-								}
-							];
-							var myDoughnut = new Chart(document.getElementById("javascript").getContext("2d")).Doughnut(doughnutData);
-					</script>
-				</div>
-				<div class="col-lg-3 mt">
-					<canvas id="bootstrap" height="130" width="130"></canvas>
-					<p>Bootstrap</p>
-					<br>
-					<script>
-						var doughnutData = [
-								{
-									value: 90,
-									color:"#74cfae"
-								},
-								{
-									value : 10,
-									color : "#3c3c3c"
-								}
-							];
-							var myDoughnut = new Chart(document.getElementById("bootstrap").getContext("2d")).Doughnut(doughnutData);
-					</script>
-				</div>
-				<div class="col-lg-3 mt">
-					<canvas id="wordpress" height="130" width="130"></canvas>
-					<p>Wordpress</p>
-					<br>
-					<script>
-						var doughnutData = [
-								{
-									value: 65,
-									color:"#74cfae"
-								},
-								{
-									value : 35,
-									color : "#3c3c3c"
-								}
-							];
-							var myDoughnut = new Chart(document.getElementById("wordpress").getContext("2d")).Doughnut(doughnutData);
-					</script>
-				</div>
-				<div class="col-lg-3 mt">
-					<canvas id="photoshop" height="130" width="130"></canvas>
-					<p>Photoshop</p>
-					<br>
-					<script>
-						var doughnutData = [
-								{
-									value: 50,
-									color:"#74cfae"
-								},
-								{
-									value : 50,
-									color : "#3c3c3c"
-								}
-							];
-							var myDoughnut = new Chart(document.getElementById("photoshop").getContext("2d")).Doughnut(doughnutData);
-					</script>
-				</div>
-			</div><!-- /row -->
-		</div><!-- /container -->
-	</div><!-- /skills -->
 	
 	<section id="contact"></section>
 	<div id="social">
