contact section returned back

--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@
 		<div class="container">
 			<div class="row">
                 <div class="container style="padding: 10px" itemscope itemtype="http://www.data-vocabulary.org/Organization">
-                    <p>&copy; Copyright 2013-2015 <a href="mailto:info@naseukoly.cz" class="fg-yellow">
-                    <span itemprop="name">Naše&#218;koly.CZ sr.o.</span></a></span></a>, <span itemprop="address" itemscope itemtype="http://data-vocabulary.org/Address"><span itemprop="street-address">Koněvova 54</span>, 130 00 <span itemprop="locality">Praha 3</span>. Email <a href="mailto:info@naseukoly.cz">info@naseukoly.cz</a></span>. Author: <a target="_blank" href="https://plus.google.com/100500450503651903900?rel=author">Soňa Kratochvílová</a>.            
+                    <p><section id="contact">&copy; Copyright 2013-2015 <a href="mailto:info@naseukoly.cz" class="fg-yellow">
+                    <span itemprop="name">Naše&#218;koly.CZ sr.o.</span></a></span></a>, <span itemprop="address" itemscope itemtype="http://data-vocabulary.org/Address"><span itemprop="street-address">Koněvova 54</span>, 130 00 <span itemprop="locality">Praha 3</span>. Email <a href="mailto:info@naseukoly.cz">info@naseukoly.cz</a></span>. Author: <a target="_blank" href="https://plus.google.com/100500450503651903900?rel=author">Soňa Kratochvílová</a>.
+                    </section>
                     Crafted with <i class="fa fa-heart"></i> by BlackTie.co.</p>
                 </div>
 				
