--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Business Consultants and Functional .NET Developers in F#">
+    <meta name="author" content="NašeÚkoly.CZ s.r.o.">
 
     <title>NašeÚkoly.CZ - Business Consultants and Functional .NET Developers in F#</title>
 
