--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <span><strong>.NET Business Processes Automation Platform</strong></span>
 			</div>
 			<div class="col-lg-4">
-                <span><strong>Microsoft Dynamics CRM implementation in Langard</strong></span>
+                <span><strong>Microsoft Dynamics CRM implementation in a construction company</strong></span>
 			</div>
 		</div>
 				
