--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>NašeÚkoly.CZ</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="http://http//www.naseukoly.cz//stylesheets/styles.css">
     <link rel="stylesheet" href="http://http//www.naseukoly.cz//stylesheets/pygment_trac.css">
     <link rel="stylesheet" href="http://http//www.naseukoly.cz//stylesheets/metro.css">
@@ -49,47 +49,22 @@
 </div>
 		
 
-<div class="panel">
-    <div class="heading">
-        <span class="title">Technologies</span>
-    </div>
-    <div class="content">
-		<ol class="numeric-list square-marker">
-			<li>We prefer <a href="http://fsharp.org/" target="_blank"><strong>F#</strong></a></li>
-			<li>We build Web applications with <a href="http://fsharp.org/" target="_blank"><strong>React<span class="fg-red">JS</span></strong></a></li>
-			<li>In cloud we store SQL data in <a href="https://azure.microsoft.com/en-us/services/sql-database/" target="_blank"><strong>Microsoft Azure <span class="fg-red">SQL</span></strong></a> </li>
-			<li>For human accessible structured data we prefer <a href="https://products.office.com/en-us/sharepoint/sharepoint-online-collaboration-software" target="_blank"><strong>SharePoint Online</strong></a> </li>
-			<li>On mobile phones we use <a href="https://facebook.github.io/react-native/" target="_blank"><strong>React Native</strong></a></li>
-		</ol>		
-    </div>
-</div>
+<p><h2>Office address</h2>
+<address>
+<strong>NašeÚkoly.CZ</strong><br>
+BonaServa Business Center<br>
+Koněvova 54<br>
+130 00 Praha 3<br>
+<abbr title="Email">E:</abbr> <a href="mailto:info@naseukoly.cz">info@naseukoly.cz</a>
+</address>
+<h2>Invoicing address</h2>
+<address>
+<strong>NašeÚkoly.CZ s.r.o.</strong><br>
+Jagellonská 1498/29<br>
+130 00 Praha 3<br>
+VAT ID: CZ24180149
+</address></p>
 
-<div class="panel">
-    <div class="heading">
-        <span class="title">Customers</span>
-    </div>
-    <div class="content">
-		<ul class="simple-list large-bullet">
-			<li>Edwards Lifesciences</li>
-			<li>FLORES Software</li>
-			<li>GUMEX</li>
-			<li>H.P.L. Systems</li>
-			<li>KALAS Sportswear</li>
-			<li>MVV Energie</li>
-			<li>Utilities Systems</li>
-		</ul>
-    </div>
-</div>
-
-
-<div class="panel">
-    <div class="heading">
-        <span class="title">About NašeÚkoly.CZ</span>
-    </div>
-    <div class="content" id="presentation">
-        <iframe width="100%" height="60%" src="http://www.naseukoly.cz/about-naseukolycz/#/"></iframe>
-    </div>
-</div>
 
 
    <hr ></hr>
