--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </div>
 
 
-<div class="panel">
+<div class="panel hidden-phone">
     <div class="heading">
         <span class="title">About NašeÚkoly.CZ</span>
     </div>
