Update generated web site (20 prosince 2016)

--- a/contact/index.html
+++ b/contact/index.html
@@ -52,16 +52,15 @@
 <p><h2>Office address</h2>
 <address>
 <strong>NašeÚkoly.CZ</strong><br>
-BonaServa Business Center<br>
-Koněvova 54<br>
+Jičínská 1616/29<br>
 130 00 Praha 3<br>
 <abbr title="Email">E:</abbr> <a href="mailto:info@naseukoly.cz">info@naseukoly.cz</a>
 </address>
 <h2>Invoicing address</h2>
 <address>
 <strong>NašeÚkoly.CZ s.r.o.</strong><br>
-Jagellonská 1498/29<br>
-130 00 Praha 3<br>
+Korunní 2569/108a<br>
+101 00 Praha 10 Vinohrady<br>
 VAT ID: CZ24180149
 </address></p>
 
