--- a/index.html
+++ b/index.html
@@ -81,6 +81,17 @@
     </div>
 </div>
 
+<div class="panel">
+    <div class="heading">
+        <span class="title">Products</span>
+    </div>
+    <div class="content">
+		<ul class="simple-list large-bullet">
+			<li>KnowledgeBase</li>
+			<li>Exchange2CRM</li>
+		</ul>
+    </div>
+</div>
 
 <div class="panel hidden-phone">
     <div class="heading">
