Update generated web site (19 února 2017)

--- a/contact/index.html
+++ b/contact/index.html
@@ -30,8 +30,8 @@
 					<a href="" class="dropdown-toggle">Blog</a>
 					<ul class="d-menu" data-role="dropdown">
 
+						<li><a href="/blog/2016/08-31-sharepoint-development-with-suave/index.html">SharePoint Development with Suave</a></li>
 						<li><a href="/blog/2016/12-20-hello-fable-import-sharepoint/index.html">Hello fable-import-sharepoint</a></li>
-						<li><a href="/blog/2016/09-03-welcome-to-naseukoly-cz/index.html">welcome to NaseUkoly.CZ</a></li>
 						<li class="divider"></li>
 						<li><a href="/blog/index.html">All posts</a></li>
 					</ul>
@@ -55,13 +55,24 @@
 <strong>NašeÚkoly.CZ</strong><br>
 Jičínská 1616/29<br>
 130 00 Praha 3<br>
+Czech Republic<br>
 <abbr title="Email">E:</abbr> <a href="mailto:info@naseukoly.cz">info@naseukoly.cz</a>
 </address>
+<hr/>
+<h2>Mailing address</h2>
+<address>
+<strong>NašeÚkoly.CZ</strong><br>
+Vojtěšská 31/28<br>
+284 01 Kutná Hora<br>
+Czech Republic<br>
+</address>
+<hr/>
 <h2>Invoicing address</h2>
 <address>
 <strong>NašeÚkoly.CZ s.r.o.</strong><br>
 Korunní 2569/108a<br>
 101 00 Praha 10 Vinohrady<br>
+Czech Republic<br>
 VAT ID: CZ24180149
 </address></p>
 
