--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 					<ul class="d-menu" data-role="dropdown">
 
 						<li><a href="/blog/2016/08-31-sharepoint-development-with-suave/index.html">SharePoint Development with Suave</a></li>
+						<li><a href="/blog/2017/07-19-sync-today-addin-for-outlook-and-jira/index.html">Sync.Today AddIn for Outlook and JIRA</a></li>
 						<li><a href="/blog/2016/12-20-hello-fable-import-sharepoint/index.html">Hello fable-import-sharepoint</a></li>
 						<li class="divider"></li>
 						<li><a href="/blog/index.html">All posts</a></li>
@@ -121,16 +122,5 @@
 
 	
     <script src="http://www.naseukoly.cz//javascripts/scale.fix.js"></script>
-    <script src="http://www.naseukoly.cz//javascripts/scale.fix.js"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-24060419-1', 'auto');
-  ga('send', 'pageview');
-
-</script>	
   </body>
 </html>
