--- a/index.html
+++ b/index.html
@@ -45,27 +45,11 @@
 
 <div class="align-center">
 	<h1 class="text-shadow metro-title text-light" style="font-size: 4.5rem; line-height: 1">NašeÚkoly.CZ</h1>
-	<div class="padding30 sub-leader text-light">Functional C#,F# and JavaScript Web, Mobile, Office 365, SharePoint and BI Development</div>
+	<div class="padding30 sub-leader text-light">Functional C#, F#, Kotlin, Java and JavaScript Software Development</div>
 						
 	</p>
 </div>
 		
-
-<div class="panel">
-    <div class="heading">
-        <span class="title">Technologies</span>
-    </div>
-    <div class="content">
-		<ol class="numeric-list square-marker">
-			<li>We prefer <a href="http://fsharp.org/" target="_blank"><strong>F#</strong></a></li>
-			<li>We build Web applications with <a href="http://fsharp.org/" target="_blank"><strong>React<span class="fg-red">JS</span></strong></a></li>
-			<li>In cloud we store SQL data in <a href="https://azure.microsoft.com/en-us/services/sql-database/" target="_blank"><strong>Microsoft Azure <span class="fg-red">SQL</span></strong></a> </li>
-			<li>For human accessible structured data we prefer <a href="https://products.office.com/en-us/sharepoint/sharepoint-online-collaboration-software" target="_blank"><strong>SharePoint Online</strong></a> </li>
-			<li>On mobile phones we use <a href="https://facebook.github.io/react-native/" target="_blank"><strong>React Native</strong></a></li>
-		</ol>		
-    </div>
-</div>
-
 <div class="panel">
     <div class="heading">
         <span class="title">Customers</span>
@@ -79,27 +63,6 @@
 			<li>MVV Energie</li>
 			<li>Utilities Systems</li>
 		</ul>
-    </div>
-</div>
-
-<div class="panel">
-    <div class="heading">
-        <span class="title">Products</span>
-    </div>
-    <div class="content">
-		<ul class="simple-list large-bullet">
-			<li>KnowledgeBase</li>
-			<li>Exchange2CRM</li>
-		</ul>
-    </div>
-</div>
-
-<div class="panel hidden-phone">
-    <div class="heading">
-        <span class="title">About NašeÚkoly.CZ</span>
-    </div>
-    <div class="content" id="presentation">
-        <iframe width="100%" height="60%" src="http://www.naseukoly.cz/about-naseukolycz/#/"></iframe>
     </div>
 </div>
 
