--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
    <hr ></hr>
 
 		<div class="align-center">
-    <p class="text-muted">&copy; Copyright 2016 NašeÚkoly.CZ s.r.o. All Rights Reserved. <abbr title="Email">E:</abbr> <a href="mailto:info@naseukoly.cz">info@naseukoly.cz</a>.<br></br>
+    <p class="text-muted">&copy; Copyright 2011-2018 NašeÚkoly.CZ s.r.o. All Rights Reserved. <abbr title="Email">E:</abbr> <a href="mailto:info@naseukoly.cz">info@naseukoly.cz</a>.<br></br>
 
 		We use cookies to ensure that we give you the best experience on our website. If you continue without changing your settings, we'll assume that you are happy to receive all cookies from this website. If you would like to change your preferences you may do so by following the instructions <a href="http://www.aboutcookies.org/Default.aspx?page=1">here</a>
 		</p>
